--- a/package.json
+++ b/package.json
@@ -29,5 +29,10 @@
   },
   "dependencies": {
     "pre-commit": "^1.2.2"
+  },
+  "pnpm": {
+    "overrides": {
+      "cross-spawn@<6.0.6": ">=6.0.6"
+    }
   }
 }
